<resources>
    <string name="game_view_content_description">Game view</string>
    <string name="app_name">Proyecto</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_register">Leanback Register</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="idioma">idioma</string>
    <string name="seleccionar_idioma">Seleccionar idioma</string>
    <string name="str_en" >Ingles</string>
    <string name="str_es" >Español</string>
    <string name="recuerda_cocinar_los_ingredientes_con_su_correspondido_utensilio_y_cuando_lo_tengas_todo_corre_a_la_salida_para_entregar_el_pedido_antes_de_que_se_acabe_el_tiempo">Recuerda cocinar los ingredientes con su correspondido utensilio, y cuando lo tengas todo, ¡Corre a la salida para entregar el pedido antes de que se acabe el tiempo!</string>
    <string name="recuerda_evitar_objetos_y_sobretodo_a_los_clientes_ya_que_te_restar_n_tiempo_del_que_tienes_para_cumplir_la_misi_n">¡Recuerda evitar objetos y sobretodo a los clientes, ya que te restarán tiempo del que tienes para cumplir la misión!</string>
    <string name="instrucciones_del_juego">Instrucciones del juego</string>
    <string name="listo_para_empezar_el_reto">¿Listo para empezar el reto?</string>
    <string name="cookwithme_es_un_juego_2d_ambientado_en_una_cocina_cuyo_protagonista_es_el_chef_manejado_por_el_usuario">CookWithMe es un juego 2D ambientado en una cocina, cuyo protagonista es el chef, manejado por el usuario.</string>
    <string name="usa_las_flechas_para_moverte_por_el_tablero_y_recoge_a_tu_paso_todos_los_ingredientes_que_necesites_para_completar_tu_pedido_seg_n_la_receta">Usa las flechas para moverte por el tablero, y recoge a tu paso todos los ingredientes que necesites para completar tu pedido, según la receta.</string>
    <string name="con_ingredientes_sartenes_y_otros_utensilios_tendr_que_preparar_la_receta_que_se_le_exija_en_cada_nivel_para_acumular_monedas_y_subir_de_nivel_para_ampliar_su_negocio">Con ingredientes, sartenes y otros utensilios tendrá que preparar la receta que se le exija en cada nivel, para acumular monedas y subir de nivel para ampliar su negocio.</string>
    <string name="conoce_cookwithme">Conoce CookWithMe</string>
    <string name="jugar">JUGAR</string>
    <string name="tienda">TIENDA</string>
    <string name="ayuda">AYUDA</string>
    <string name="ajustes">PREFERENCIAS</string>
    <string name="compra_ingredientes_para_tus_nuevas_recetas">¡Compra ingredientes para tus nuevas recetas!</string>
    <string name="nombre">Nombre</string>
    <string name="inicia_sesi_n_en_el_juego">Inicia sesión en el juego:</string>
    <string name="no_tienes_una_cuenta_creada_registrate">¿No tienes una cuenta creada? ¡Registrate!</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_tus_datos">Introduce tus datos:</string>
    <string name="email">Email</string>
    <string name="pa_s">País</string>
    <string name="guardar">GUARDAR</string>
    <string name="ingredientes">INGREDIENTES</string>
    <string name="utensilios">UTENSILIOS</string>
    <string name="desbloquea_tus_ingredientes_y_utensilios">¡Desbloquea tus ingredientes y utensilios!</string>
    <string name="mejora_tus_utensilios_para_ser_m_s_r_pido">¡Mejora tus utensilios para ser más rápido!</string>
    <string name="comprar">COMPRAR</string>
    <string name="enviar">ENVIAR</string>
    <string name="fecha">Fecha</string>
    <string name="descripci_n">Descripción</string>
    <string name="estas_son_las_preguntas_m_s_frecuentes">Estas son las preguntas más frecuentes:</string>
    <string name="denuncia">DENUNCIA</string>
    <string name="ranking">Clasificación</string>
    <string name="atr_s">atrás</string>
    <string-array name="languages" >
    <item>@string/str_en</item>
    <item>@string/str_es</item>
</string-array>
</resources>