<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEBC59" >

    <TextView
        android:id="@+id/textView9"
        android:layout_width="315dp"
        android:layout_height="84dp"
        android:layout_marginTop="10dp"
        android:text="@string/recuerda_cocinar_los_ingredientes_con_su_correspondido_utensilio_y_cuando_lo_tengas_todo_corre_a_la_salida_para_entregar_el_pedido_antes_de_que_se_acabe_el_tiempo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="314dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:text="@string/recuerda_evitar_objetos_y_sobretodo_a_los_clientes_ya_que_te_restar_n_tiempo_del_que_tienes_para_cumplir_la_misi_n"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/instrucciones_del_juego"
        android:textColor="#F4511E"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="317dp"
        android:layout_height="31dp"
        android:text="@string/listo_para_empezar_el_reto"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="314dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:text="@string/cookwithme_es_un_juego_2d_ambientado_en_una_cocina_cuyo_protagonista_es_el_chef_manejado_por_el_usuario"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="316dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:text="@string/usa_las_flechas_para_moverte_por_el_tablero_y_recoge_a_tu_paso_todos_los_ingredientes_que_necesites_para_completar_tu_pedido_seg_n_la_receta"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="313dp"
        android:layout_height="110dp"
        android:layout_marginTop="21dp"
        android:text="@string/con_ingredientes_sartenes_y_otros_utensilios_tendr_que_preparar_la_receta_que_se_le_exija_en_cada_nivel_para_acumular_monedas_y_subir_de_nivel_para_ampliar_su_negocio"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/conoce_cookwithme"
        android:textColor="#F4511E"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>