<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondologin">

    <Button
        android:id="@+id/jugarBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:onClick="onClickJugar"
        android:text="@string/jugar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <Button
        android:id="@+id/tiendaBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="tiendaBtn"
        android:text="@string/tienda"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jugarBtn" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="215dp"
        android:layout_height="129dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/ayudaBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="ayudaBtn"
        android:text="@string/ayuda"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiendaBtn" />

    <Button
        android:id="@+id/denunciaBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="denunciaBtn"
        android:text="@string/denuncia"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ayudaBtn" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/faqBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="faqBtn"
        android:text="FAQs"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/denunciaBtn" />

    <Button
        android:id="@+id/buttonAjutes"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="buttonPerfil"
        android:text="@string/ajustes"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/ayudaBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ayudaBtn"
        app:layout_constraintTop_toBottomOf="@+id/faqBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>